<resources>

    <string name="app_name">蓝九天管理</string>
    <string name="zhanghao">账号</string>
    <string name="phone_number1">请输入账号</string>
    <string name="mima">密码</string>
    <string name="mima1">请输入密码</string>
    <string name="login">登陆</string>
    <string name="shop">商品管理</string>
    <string name="order">订单管理</string>
    <string name="fahuo">发货</string>
    <string name="songda">送达</string>
    <string name="jushou">拒收</string>
    <string name="order_del">删除订单</string>
    <string name="order_details">订单详情</string>
    <string name="tuichu">退出登录</string>
    <string name="empty_error">暂无数据</string>
    <string name="setting">设置</string>

    <string name="msg_opreation_timeout">与服务器连接超时，请稍后重试</string>
    <string name="network_not_available">无法连接到网络，请检查网络配置</string>
    <string name="opreation_failure">服务器访问异常，请稍后重试</string>
    <string name="title_home">蓝九天物流</string>
    <string name="title_awardlist">奖品兑换</string>
    <string name="title_awardneedlist">奖品列表</string>
    <string name="title_notifications">通知</string>
    <string name="title_dashboard">蓝九天</string>
    <string name="text_holder">-----</string>
    <string name="lanjian">揽件</string>
    <string name="fragment_delegater_courier">派件人</string>
    <string name="fragment_delegater_courier_mobile">派件人电话</string>
    <string name="fragment_delegater_courier_car">派件车辆</string>
    <string name="text_sure">确认</string>
    <string name="delegater_edit_courierName_valid">清填写10个字符以内的名字</string>
    <string name="delegater_edit_courierMobile_valid">请填写您的手机号</string>
    <string name="delegater_edit_courierCar_valid">请填写正确的车牌号</string>
    <string name="alert_tishi">提示</string>
    <string name="confirm_curior_arrive">是否确定送达?</string>
    <string name="alert_queding">确定</string>
    <string name="alert_quxiao">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_new">新订单</string>
    <string name="order_running">进行中</string>
    <string name="order_completed">已完成</string>
    <string name="order_canceled">已取消</string>
    <string name="order_refund">售后</string>
    <string name="net_err">网络未连接</string>
    <string name="login_err">未登录</string>
    <string name="title_orderdetail">订单详情</string>
    <string name="title_setting">设置</string>
    <string name="title_updatepwd">修改密码</string>
    <string name="logistic_delegate">第三方物流</string>
    <string name="logistic_ljt">发货</string>
    <string name="shop_name">店铺名称</string>
    <string name="saoma">二维码</string>
    <string name="submit">提交</string>
    <string name="tongyi">同意</string>
    <string name="jujue">拒绝</string>
    <string name="title_size">规格</string>
    <string name="title_cat">分类</string>
    <string name="title_factory">厂家</string>
    <string name="title_code">条码</string>
    <string name="order_detail_group_discount">店铺优惠</string>
    <string name="money_renminbi">￥%s</string>
    <string name="order_detail_group_costmoney">商品小计：￥%1$s  邮费：￥%2$s</string>
    <string name="order_detail_group_payamount">实付款：￥%s</string>
    <string name="order_detail_group_invoice">发票信息：%1$s %1$s</string>
    <string name="order_detail_group_remark">备注：%s</string>
    <string name="order_detail_user_info_name">姓名：%s    </string>
    <string name="order_detail_user_info_mobile">拨打电话：%s </string>
    <string name="order_detail_user_addr">地址：%s </string>
    <string name="order_detail_group_distance">距离：%s km</string>
    <string name="order_detail_return_reason">退货原因：%s </string>
    <string name="order_detail_return_money">退款金额：￥%s </string>
    <string name="order_detail_return_remark">描述：%s </string>
    <string name="orderlist_orderid">订单编号：%s</string>
    <string name="orderlist_orderstat_unknow">未知</string>
    <string name="orderlist_num">订单数量\n%d</string>
    <string name="orderlist_costmoney">订单金额\n￥%s</string>
</resources>
