<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin3"
        android:scaleType="fitXY"
        android:src="@mipmap/denglubeijing" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x35"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginRight="@dimen/x15"
        android:layout_marginTop="@dimen/x5"
        android:background="@drawable/background_submit_yuan_lan"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/next"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/zhanghao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x35"
            android:orientation="horizontal">

            <TextView
                style="@style/font_ww_14"
                android:layout_marginLeft="@dimen/x10"
                android:text="@string/zhanghao"
                android:textColor="@color/font_black1" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:background="@null"
                android:hint="@string/phone_number1"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_below="@+id/zhanghao"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="@color/basebackground" />

        <LinearLayout
            android:id="@+id/mima"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x35"
            android:layout_marginTop="@dimen/x5"
            android:orientation="horizontal">

            <TextView
                style="@style/font_ww_14"
                android:layout_marginLeft="@dimen/x10"
                android:text="@string/mima"
                android:textColor="@color/font_black1" />

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:background="@null"
                android:hint="@string/mima1"
                android:maxLines="1"
                android:password="true"
                android:singleLine="true"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_below="@+id/mima"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:background="@color/basebackground" />

    </LinearLayout>


</RelativeLayout>