<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_order_detail_ryv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/x3"
        android:layout_weight="1"
        android:background="@color/basebackground" />

    <LinearLayout
        android:id="@+id/fragment_order_detail_ll_logistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_submit_yuan_lan" />

        <TextView
            android:id="@+id/fragment_order_detail_tv_logistic_name"
            style="@style/base_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="张三" />

        <TextView
            android:id="@+id/fragment_order_detail_tv_logistic_info"
            style="@style/base_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="预计20分钟"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <Button
        android:id="@+id/fragment_order_detail_btn_songda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_selector"
        android:text="@string/songda"
        android:textColor="@color/white"
        android:textSize="@dimen/font_5" />

    <Button
        android:id="@+id/fragment_order_detail_btn_jushou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_selector"
        android:text="@string/jushou"
        android:textColor="@color/white"
        android:textSize="@dimen/font_5" />


    <Button
        android:id="@+id/fragment_order_detail_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_selector"
        android:text="拦件"
        android:textColor="@color/white"
        android:textSize="@dimen/font_5" />


    <!--同意退货-->
    <Button
        android:id="@+id/fragment_order_detail_btn_shouhoutongyi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_selector"
        android:text="@string/tongyi"
        android:textColor="@color/white"
        android:textSize="@dimen/font_5" />

    <!--拒绝退货-->
    <Button
        android:id="@+id/fragment_order_detail_btn_shouhoujujue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_selector"
        android:text="@string/jujue"
        android:textColor="@color/white"
        android:textSize="@dimen/font_5" />
</LinearLayout>
